--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">SMD</string>
-    <string name="title_activity_bottom">BottomActivity</string>
+    <string name="title_activity_bottom">SMD</string>
     <string name="title_trips">Поездки</string>
     <string name="title_consumption">Расход</string>
     <string name="title_diagnostic">Диагностика</string>
